fix: footer alignment

--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ h3 {
     color: #94969f;
     display: flex;
     justify-content: space-between;
+    align-items: left;
 }
 .cop{
     margin: 0 13px;
